[tool.poetry]
name = "maidenheaven"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "maidenheaven"}]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.23.1"
aiofiles = "^23.1.0"
aiohttp = "^3.8.6"
aiosignal = ^"1.3.1"
altgraph = "^0.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
